scss/base/typography.scss
@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Open+Sans:wght@300;400;500&display=swap");

h1,
h2,
h3,
h4 {
  font-family: "DM Serif Display", serif;
}

h1 {
  font-size: 8rem; // was 10rem
  line-height: 9.6rem;
  ; // keep ~1.2× the font-size
  font-weight: 500;
}

h2 {
  font-size: 8rem;
}

h3 {
  font-size: 6rem;
  line-height: 7rem;
}

h4 {
  font-size: 4rem;
  line-height: 4.7rem;
}

h5 {
  font-size: 3rem;
}

.copy {
  font-size: 2rem;
}

.copy-small {
  font-size: 15px;
  padding-top: 1.5rem;
}

@include respond(small-phone) {
  .copy-small {
    font-size: 7.5px;
    padding-top: 0.1rem; // reduce from 0.6rem
  }

  h1 {
    font-size: 6rem;
    line-height: 8rem;
  }

  h2 {
    font-size: 2.4rem;
  }

  h3 {
    font-size: 3rem;
  }

  h4 {
    font-size: 1.8rem;
  }

  h5 {
    font-size: 1.6rem;
  }

  h6 {
    font-size: 1.4rem;
  }

  p {
    font-size: 1.4rem;
  }

  .copy {
    font-size: 1.4rem;
  }
}

